layout/generic/nsIScrollableFrame.h
@@ -193,6 +193,10 @@ class nsIScrollableFrame : public nsIScrollbarMediator {
   virtual nsSize GetPageScrollAmount() const = 0;
 
   /**
+   * Return scroll-padding value of this frame.
+   */
+  virtual nsMargin GetScrollPadding() const = 0;
+  /**
    * Some platforms (OSX) may generate additional scrolling events even
    * after the user has stopped scrolling, simulating a momentum scrolling
    * effect resulting from fling gestures.
